--- a/device-login.html
+++ b/device-login.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Перевірка акаунта</title>
+    <title>Увійшли на пристрої?</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Кнопка повернення на початок -->
     <a href="index.html" class="back">Повернутися на початок</a>
 
     <div class="container">
-      <h1>Чи пам’ятаєте ви логін і пароль від акаунта Roblox?</h1>
+      <h1>Чи маєте ви увійдений акаунт на пристрої (телефон чи планшет)?</h1>
       <div class="buttons">
-        <a href="download.html" class="button">Так</a>
-        <a href="device-login.html" class="button">Ні</a>
+        <a href="login-other-device.html" class="button">Так</a>
+        <a href="dont-remember.html" class="button">Ні</a>
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
 </html>
