--- a/dont-remember.html
+++ b/dont-remember.html
@@ -4,25 +4,116 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Створення нового акаунта</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-Inst.css" />
   </head>
   <body>
     <!-- Кнопка повернення на початок -->
     <a href="index.html" class="back">Повернутися на початок</a>
 
     <div class="container">
-      <h1>Створіть новий акаунт для навчання</h1>
-      <p>
-        Якщо ви ще не маєте акаунта в Roblox, рекомендуємо створити новий
-        акаунт, щоб пройти через навчання.
-      </p>
-      <p>
-        Для цього просто натисніть на посилання нижче, щоб дізнатися, як
-        створити акаунт і розпочати навчання:
-      </p>
-      <a href="create-account.html" class="button"
-        >Інструкція по створенню акаунта</a
-      >
+      <h2 style="color: red">
+        Якщо немає доступу до старого акаунту, рекомендую створити акаунт та
+        увійти в Roblox Studio
+      </h2>
+      <h1>Як створити акаунт у Roblox та увійти в Roblox Studio</h1>
+      <div class="video-section">
+        <h2>Відео інструкція встановлення</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/hL1-l91eiz8?si=dE3U1joKS7pHSHPe"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <h2>Покрокова інструкція встановлення</h2>
+      <ol class="instructions">
+        <li>
+          <strong>Перейдіть на сайт Roblox Studio</strong>, натисніть на кнопку
+          <strong>Start Creating</strong>, щоб почати створення. Цей крок
+          дозволить вам завантажити Roblox Studio на ваш комп'ютер.
+          <div class="screenshot">
+            <img src="img/1.gif" alt="Сторінка Roblox Create" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Дочекайтеся, поки файл завантажиться</strong>, та відкрийте
+          його після завантаження. Інсталятор Roblox Studio автоматично
+          відкриється.
+          <div class="screenshot">
+            <img src="img/2.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Дочекайтесь завершення встановлення</strong> Roblox Studio на
+          ваш комп'ютер. Після завершення встановлення якщо ви ще не увійшли в
+          свій акаунт, на екрані з'явиться форма для введення логіну та паролю.
+          <div class="screenshot">
+            <img src="img/3.gif" alt="Процес встановлення Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          Далі вам потрібно створити акаунт Roblox, для перейдіть на сайт
+          <a href="https://create.roblox.com/" target="_blank"
+            >https://create.roblox.com/</a
+          >
+          на якому ви завантажували програму. Та натисніть на кнопку Log In у
+          верхньому правому куті сторінки.
+          <div class="screenshot">
+            <img src="img/10.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          Відкриється форма для входу в акаунт. Під нею натисніть на посилання
+          <strong>Sign Up</strong>, щоб перейти до форми реєстрації нового
+          акаунта.
+          <div class="screenshot">
+            <img src="img/11.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          Заповніть форму для реєстрації: введіть дату народження, придумайте
+          ім’я користувача та пароль. Оберітьте стать, якщо це потрібно.
+          <strong
+            >Обов’язково запам’ятайте своє ім’я користувача та пароль, оскільки
+            вони будуть потрібні для входу в Roblox Studio.
+          </strong>
+          <div class="screenshot">
+            <img src="img/13.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          Після цього натисніть кнопку <strong>Sign Up</strong> для завершення
+          реєстрації.
+          <div class="screenshot">
+            <img src="img/14.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+        <li>
+          Після успішної реєстрації, поверніться у Roblox Studio та ввійдіть за
+          допомогою створеного логіну та паролю.
+          <div class="screenshot">
+            <img src="img/15.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+        <li>
+          <strong>Натисніть на кнопку <em>Log In</em></strong
+          >, щоб увійти в свій акаунт Roblox в Roblox Studio. Тепер ви готові
+          почати створювати ігри або редагувати їх у Roblox Studio.
+          <div class="screenshot">
+            <img src="img/16.png" alt="Вхід у Roblox Studio" />
+          </div>
+        </li>
+      </ol>
     </div>
   </body>
 </html>
