--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Встановлення Roblox Studio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-Inst.css" />
   </head>
   <body>
     <!-- Кнопка повернення на початок тепер як звичайне посилання -->
@@ -12,41 +12,66 @@
 
     <div class="container">
       <h1>Як завантажити Roblox Studio</h1>
+      <div class="video-section">
+        <h2>Відео інструкція встановлення</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/oMgghBLdWyc?si=qeQUwxkKbh1Ywnw8"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <h2>Покрокова інструкція встановлення</h2>
       <ol class="instructions">
         <li>
-          Перейдіть на сайт
-          <a href="https://www.roblox.com/create" target="_blank"
-            >roblox.com/create</a
-          >.
+          <strong>Перейдіть на сайт Roblox Studio</strong>, натисніть на кнопку
+          <strong>Start Creating</strong>, щоб почати створення. Цей крок
+          дозволить вам завантажити Roblox Studio на ваш комп'ютер.
+          <div class="screenshot">
+            <img src="img/1.gif" alt="Сторінка Roblox Create" />
+          </div>
         </li>
-        <li>Натисніть кнопку <strong>Start Creating</strong>.</li>
-        <li>
-          Якщо Roblox Studio ще не встановлено — з’явиться кнопка
-          <strong>Download Studio</strong>. Натисніть її.
-        </li>
-        <li>
-          Після завантаження відкрийте файл
-          <strong>RobloxStudioInstaller.exe</strong> і дочекайтеся завершення
-          встановлення.
-        </li>
-        <li>Відкрийте Roblox Studio, увійдіть під своїм логіном та паролем.</li>
-        <li>Готово! 🎉 Тепер ви можете створювати свої ігри.</li>
-      </ol>
 
-      <div class="screenshots">
-        <img
-          src="https://i.imgur.com/COqLrPq.png"
-          alt="Сторінка Roblox Create"
-        />
-        <img
-          src="https://i.imgur.com/zZpKxEs.png"
-          alt="Кнопка Download Studio"
-        />
-        <img
-          src="https://i.imgur.com/lOl1A7q.png"
-          alt="Вікно входу в Roblox Studio"
-        />
-      </div>
+        <li>
+          <strong>Дочекайтеся, поки файл завантажиться</strong>, та відкрийте
+          його після завантаження. Інсталятор Roblox Studio автоматично
+          відкриється.
+          <div class="screenshot">
+            <img src="img/2.gif" alt="Завантаження Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Дочекайтесь завершення встановлення</strong> Roblox Studio на
+          ваш комп'ютер. Після завершення встановлення якщо ви ще не увійшли в
+          свій акаунт, на екрані з'явиться форма для введення логіну та паролю.
+          <div class="screenshot">
+            <img src="img/3.gif" alt="Процес встановлення Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Введіть ваш логін та пароль від акаунта Roblox</strong>.
+          Пам'ятайте, що ви можете використовувати ті самі облікові дані, які
+          використовуєте для входу в Roblox.
+          <div class="screenshot">
+            <img src="img/15.gif" alt="Введення логіну і паролю" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Натисніть на кнопку <em>Log In</em></strong
+          >, щоб увійти в свій акаунт Roblox в Roblox Studio. Тепер ви готові
+          почати створювати ігри або редагувати їх у Roblox Studio.
+          <div class="screenshot">
+            <img src="img/16.png" alt="Вхід у Roblox Studio" />
+          </div>
+        </li>
+      </ol>
     </div>
   </body>
 </html>
