--- a/login-other-device.html
+++ b/login-other-device.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Як увійти з іншого пристрою</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-Inst.css" />
   </head>
   <body>
     <!-- Кнопка повернення на початок -->
@@ -12,27 +12,95 @@
 
     <div class="container">
       <h1>Як увійти в Roblox з іншого пристрою?</h1>
+
+      <div class="video-section">
+        <h2>Відео інструкція встановлення</h2>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/Fmn6byAg-Wk?si=RxGNLiKI6M8NGzPz"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+      <h2>Покрокова інструкція встановлення</h2>
       <ol class="instructions">
         <li>
-          Відкрийте додаток Roblox на новому пристрої (телефоні чи планшеті).
+          <strong>Перейдіть на сайт Roblox Studio</strong>, натисніть на кнопку
+          <strong>Start Creating</strong>, щоб почати створення. Цей крок
+          дозволить вам завантажити Roblox Studio на ваш комп'ютер.
+          <div class="screenshot">
+            <img src="img/1.gif" alt="Сторінка Roblox Create" />
+          </div>
         </li>
-        <li>Увійдіть за допомогою вашого логіну та паролю.</li>
+
         <li>
-          Якщо ви не пам'ятаєте пароль, натисніть "Забули пароль?" і слідуйте
-          інструкціям для відновлення доступу.
+          <strong>Дочекайтеся, поки файл завантажиться</strong>, та відкрийте
+          його після завантаження. Інсталятор Roblox Studio автоматично
+          відкриється.
+          <div class="screenshot">
+            <img src="img/2.gif" alt="Завантаження Roblox Studio" />
+          </div>
         </li>
+
         <li>
-          Після входу ви можете продовжити створення ігор у Roblox Studio або
-          просто грати в ігри.
+          <strong>Дочекайтесь завершення встановлення</strong> Roblox Studio на
+          ваш комп'ютер.
+          <div class="screenshot">
+            <img src="img/3.gif" alt="Процес встановлення Roblox Studio" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Натисніть на кнопку <em>Use Another Device</em></strong> на
+          екрані вашого комп'ютера. Цей крок дозволить вам увійти в Roblox за
+          допомогою телефону або планшета.
+          <div class="screenshot">
+            <img src="img/4.png" alt="Вибір 'Use Another Device'" />
+          </div>
+        </li>
+
+        <li>
+          <strong
+            >Відкрийте Roblox на вашому телефоні або планшеті та перейдіть до
+            вкладки <em>More</em></strong
+          >
+          — три крапки в нижньому правому кутку екрана.
+          <div class="screenshot">
+            <img src="img/5.gif" alt="Меню 'More' в Roblox" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Прогорніть вниз та натисніть <em>Quick Sign In</em></strong
+          >, щоб продовжити вхід на новому пристрої.
+          <div class="screenshot">
+            <img src="img/6.gif" alt="Quick Sign In в меню 'More'" />
+          </div>
+        </li>
+
+        <li>
+          <strong
+            >Код який ви бачите на комп'ютері потрібно ввести у поле введення на
+            телефоні чи планшеті</strong
+          >
+          та натиснути кнопку <strong>Confirm login</strong>.
+          <div class="screenshot">
+            <img src="img/7.gif" alt="Сканування QR-коду на телефоні" />
+          </div>
+        </li>
+
+        <li>
+          <strong>Готово!</strong> Тепер ви успішно увійшли в Roblox Studio та
+          можете почати створювати свої ігри.
+          <div class="screenshot">
+            <img src="img/8.png" alt="Готово! Вхід успішно здійснено" />
+          </div>
         </li>
       </ol>
-
-      <div class="screenshots">
-        <img
-          src="https://i.imgur.com/CSwFx8h.png"
-          alt="Вхід на іншому пристрої"
-        />
-      </div>
     </div>
   </body>
 </html>
